fixed uneven spacing in the mobile version of the projects page

--- a/src/components/Project/index.css
+++ b/src/components/Project/index.css
@@ -9,7 +9,7 @@
 
 .project-info-container{
     height:20em;
-    width: 25em;
+    width: 75%;
     border-radius: 20px;
     box-shadow: 5px 10px 18px black;
 }
@@ -90,6 +90,7 @@
 
 .source-code{
     display: block;
+    position: relative;
     padding: 0.5em;
     color:var(--dominant-colour);
     text-decoration: underline;
@@ -99,6 +100,7 @@
 .project-buttons{
     display: flex;
     align-items: center;
+    width: 75%;
 }
 
 
@@ -109,6 +111,7 @@
     font-size: 1.25em;
     border: none;
     cursor: pointer;
+    font-family:var(--main-font);
 }
 
 .description-button{
@@ -139,10 +142,10 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        gap:4em;
+        /* gap:4em; */
         height:25em;
         width: 100%;
-        padding:20px;
+        /* padding:20px; */
         
     }
     
@@ -180,7 +183,7 @@
         position: relative;
         flex-direction: column;
         justify-content: center;
-        align-items: flex-start;
+        /* align-items: flex-start; */
         width:75%;
         padding: 0;
         height: 100%;
@@ -246,6 +249,7 @@
         background-color: var(--complementary-colour-blue);
         height: 2em;
         font-size: 1.25em;
+        font-family:var(--main-font);
         border: none;
         cursor: pointer;
     }
